fix(CV-9): fix buggy display on iOS safari

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,16 @@
 .pdf-viewer {
-  height:100vh;
-  width:100vw;
+  height: 100vh;
+  width: 100vw;
+
+  p {
+    padding: 1em;
+  }
 }
+
+//.pdf-viewer {
+//  height:100vh;
+//  width:100vw;
+//}
 
 // Toast styling
 :host::ng-deep {
